scc/tests/cc/error/0021-void.c
int
main(void)
{
	void f(void);

	return (int) f();
}
